Fix missing parent collection information in fetched items.

This gave "Given folder name is empty" warnings, and made items technically
inaccessible.

Arriving 9 hours late in Osnabrueck at least gave me an opportunity to debug
mixedmaildir with Kevin Krammer's help, in the train :-)

BUG: 285973
(cherry picked from commit c5fa16ce5af42cdfafb48dd2b6baa0b3f7c404a1)